# Tr2-Trabalho-Final

./: .gitignore  README.md  app.py  pyproject.toml  setup.sh
.github/workflows/: ci.yml
app/: __init__.py  routes.py
app/templates/: index.html
arduino/: Receptor.ino  Transmissor.ino
database/: dados.db  dados.db-shm  dados.db-wal
docs/: Funcionamento.md  Funcionamento.txt
src/gateway/: gateway.py
src/servidor/: dashboard.py  servidor.py  storage.py
src/simulador/: simulador.py
tests/: conftest.py  test_health.py
