[project]
name = "tr2-trabalho-final"
version = "0.1.0"
description = "Starter Flask project for the faculdade assignment."
requires-python = ">=3.10"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["app"]
